--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
 	"name": "wbhi-redcap",
 	"label": "WBHI REDCap Gear",
 	"description": "Queries REDCap using DICOM metadata on Flywheel to find scans matching consenting participants.",
-	"version": "0.1.3",
+	"version": "0.1.5",
 	"author": "Joe Wexler",
 	"maintainer": "Joe Wexler",
 	"cite": "",
@@ -33,7 +33,7 @@
 	"custom": {
 		"gear-builder": {
 			"category": "analysis",
-			"image": "jbwexler/wbhi-redcap:0.1.3"
+			"image": "jbwexler/wbhi-redcap:0.1.5"
 		},
 		"flywheel": {
 			"suite": "WBHI"
@@ -47,8 +47,7 @@
 	"config": {
 		"redcap_api_key": {
 			"description": "REDCap API key",
-			"type": "string",
-			"optional": true
+			"type": "string"
 		}
 	},
 	"command": "python run.py"
